--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ hljs.initHighlightingOnLoad();
 </script>
 
 <!-- MathJax scripts -->
-<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" src="https://cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 
 
@@ -227,7 +227,7 @@ additional dependencies need to be installed manually.</p>
 <p>To make sure you are installing the version mentioned in this guide, you
 can also run</p>
 
-<pre><code class="r">install_github(&#39;msuefishlab/tdmsviewer@0.5.2&#39;)
+<pre><code class="r">install_github(&#39;msuefishlab/tdmsviewer@0.8.0&#39;)
 </code></pre>
 
 <p>But you might benefit from using the latest version</p>
